scrollbar fix

--- a/src/app/main/components/search/search.component.scss
+++ b/src/app/main/components/search/search.component.scss
@@ -42,23 +42,23 @@ mat-form-field {
 
     padding: 8px;
 
-    &::-webkit-scrollbar {
-        width: 4px;
-        height: 4px;
-        margin-top: 8px;
-        background-color: var(--main-bg-color);
-        background-color: white;
-        border-radius: 3px;
-      }
+    // &::-webkit-scrollbar {
+    //     width: 4px;
+    //     height: 4px;
+    //     margin-top: 8px;
+    //     background-color: var(--main-bg-color);
+    //     background-color: white;
+    //     border-radius: 3px;
+    //   }
     
-      &::-webkit-scrollbar-track {
-        background-color: transparent;
-      }
+    //   &::-webkit-scrollbar-track {
+    //     background-color: transparent;
+    //   }
     
-      &::-webkit-scrollbar-thumb {
-        background-color: var(--purple-2);
-        border-radius: 30px;
-      }
+    //   &::-webkit-scrollbar-thumb {
+    //     background-color: var(--purple-2);
+    //     border-radius: 30px;
+    //   }
   }
 
   .result-box {
